feat: initial auth module
