# cmd/docs/swagger.yaml
@@ -1,6 +1,24 @@
 basePath: /api/v1
 definitions:
-  model.UserCreateUpdateModel:
+  model.AuthModel:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  model.AuthResponse:
+    properties:
+      data: {}
+      refresh_token:
+        type: string
+      token:
+        type: string
+    type: object
+  model.UserCreateModel:
     properties:
       email:
         type: string
@@ -9,10 +27,6 @@ definitions:
       password:
         minLength: 6
         type: string
-    required:
-    - email
-    - name
-    - password
     type: object
   model.UserModel:
     properties:
@@ -39,6 +53,20 @@ definitions:
         type: string
       name:
         type: string
+    type: object
+  model.UserUpdateModel:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        minLength: 6
+        type: string
+    required:
+    - email
+    - name
+    - password
     type: object
   shared.DataWithPagination:
     properties:
@@ -82,6 +110,45 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login an user
+      parameters:
+      - description: User Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.AuthModel'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/shared.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.AuthResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shared.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/shared.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/shared.Response'
+      summary: Login
+      tags:
+      - auth
   /users:
     get:
       consumes:
@@ -140,7 +207,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.UserCreateUpdateModel'
+          $ref: '#/definitions/model.UserCreateModel'
       produces:
       - application/json
       responses:
@@ -232,7 +299,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.UserCreateUpdateModel'
+          $ref: '#/definitions/model.UserUpdateModel'
       produces:
       - application/json
       responses:
